refactor: migrate Collections.unmodifiable* to List.copyOf/Set.copyOf/Map.copyOf (Java 10+) (#3194)
* refactor: migrate Collections.unmodifiable* to List.copyOf/Set.copyOf/Map.copyOf (Java 10+)

Motivation:
Java 10 introduced List.copyOf, Set.copyOf, and Map.copyOf as concise,
type-safe replacements for Collections.unmodifiable* wrappers. These
methods produce truly immutable snapshots rather than views, and align
with the broader Java 17 modernization effort across Pekko.

Modification:
- Replace Collections.unmodifiableList(x) with List.copyOf(x)
- Replace Collections.unmodifiableSet(new HashSet<>(Arrays.asList(...))) with Set.of(...)
- Replace Collections.unmodifiableSet(x) with Set.copyOf(x)
- Replace Collections.unmodifiableMap(x) with Map.copyOf(x)
- Remove now-unused imports (Collections, HashSet, Arrays where applicable)
- Applied across 14 test files in 6 modules

Result:
Cleaner, more idiomatic Java 17 code. Immutable snapshots instead of
unmodifiable views. Net reduction of 17 lines across 14 files.

Tests: sbt validatePullRequest
References: https://javaalmanac.io/jdk/17/apidiff/8/

* refactor: migrate Collections.singletonList to List.of per review feedback

Motivation:
Address reviewer comment that Collections.singletonList should also
be migrated to the Java 9+ factory method List.of().

Modification:
Replace Collections.singletonList(element) with List.of(element) in
StatefulMap.java.

Result:
Consistent use of Java 9+ collection factory methods.