@@ -149,10 +149,7 @@ public class ReplicatedShardingTest {
     }
 
     public static final Set<ReplicaId> ALL_REPLICAS =
-        Collections.unmodifiableSet(
-            new HashSet<>(
-                Arrays.asList(
-                    new ReplicaId("DC-A"), new ReplicaId("DC-B"), new ReplicaId("DC-C"))));
+        Set.of(new ReplicaId("DC-A"), new ReplicaId("DC-B"), new ReplicaId("DC-C"));
 
     private final ReplicatedSharding<MyReplicatedStringSet.Command> replicatedSharding;
 
